[gd_scene load_steps=2 format=2]

[ext_resource path="res://client/menu/lobby/game_setup.gd" type="Script" id=1]

[node name="GameSetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_right = 0.31
anchor_bottom = 0.375
margin_left = 446.0
margin_top = 510.0
margin_right = 282.2
margin_bottom = 311.0
text = "Start game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Players" type="Label" parent="."]
margin_left = 873.0
margin_top = 79.0
margin_right = 1212.0
margin_bottom = 98.0
size_flags_horizontal = 13
size_flags_vertical = 12
text = "Players:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerList" type="VBoxContainer" parent="."]
margin_left = 873.0
margin_top = 104.0
margin_right = 1212.0
margin_bottom = 558.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 474.335
margin_top = 86.2378
margin_right = 667.335
margin_bottom = 126.238
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 13.0
margin_right = 60.0
margin_bottom = 27.0
text = "Public IP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP" type="Label" parent="HBoxContainer"]
margin_left = 64.0
margin_top = 13.0
margin_right = 146.0
margin_bottom = 27.0
size_flags_horizontal = 3

[node name="CopyButton" type="Button" parent="HBoxContainer"]
margin_left = 150.0
margin_right = 193.0
margin_bottom = 40.0
text = "Copy"

[node name="BackButton" type="Button" parent="."]
margin_left = 152.509
margin_top = 510.054
margin_right = 321.509
margin_bottom = 579.054
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="HBoxContainer/CopyButton" to="." method="_on_CopyButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
